--- a/index.html
+++ b/index.html
@@ -1,12 +1,98 @@
-<!Doctype html>
+<!DOCTYPE HTML>
+
 <html>
-<Head>
-<title>
-Science Chapters
-</title>
+<head>
+
+    <title>Maths Quiz </title>
 </head>
-<h1  style="text-align:center">Science Chapters</h1>
-<body style="background-color:powderblue;font-size:30px;color:blue">
-<a href="Chapter1.html" >Chapter1</a>                                                                      
+
+<body>
+    <center><h1>Indirapuram Publich School Cambridge Wing</h1></center>
+    <p>
+    <form name="quiz">
+    <p>
+        <b>Q1.9 multiplied by 10 equal to </b>
+        <blockquote>
+    <input type="radio" name="q1" value="90">90<br>
+    <input type="radio" name="q1" value="0">0<br>
+    <input type="radio" name="q1" value="10">10<br>
+    </blockquote>
+
+<p><b>
+<hr>
+Q2.<b>{1000 X (3-4000} equals to </b>
+<blockquote>
+<input type="radio" name="q2" value="-1000">-1000<br>
+<input type="radio" name="q2" value="-2997">-2997<br>
+<input type="radio" name="q2" value="1000">1000<br>
+</blockquote>
+<p><b>
+<hr>
+
+Q3.<b>98 multiplied by 98 equal to </b>
+<blockquote>
+<input type="radio" name="q3" value="9604">9604<br>
+<input type="radio" name="q3" value="9898">9898<br>
+<input type="radio" name="q3" value="2764">2764<br>
+</blockquote>
+<p><b>
+<hr>
+Q4. <b> 8972 divided by 2 eqal to  </b>
+<blockquote>
+<input type="radio" name="q4" value="4487">4487<br>
+<input type="radio" name="q4" value="4427">4427<br>
+<input type="radio" name="q4" value="4467">4467<br>
+</blockquote>
+<p><b>
+<hr>
+
+<input type="button"value="Grade Me"onClick="getScore(this.form);">
+<input type="reset" value="Clear"><p>
+Number of score out of 15 = <input type= text size 15 name= "mark">
+Score in percentage = <input type=text size=15 name="percentage"><br>
+
+</form>
+<p>
+
+    <form method="post" name="Form" onsubmit=""action="">
+</form>
+
 </body>
+
+
+<script>
+var numQues = 4;
+var numChoi = 3;
+var answers = new Array(5);
+    answers[0] = "90";
+    answers[1] = "-2997";
+    answers[2] = "9604";
+    answers[3] = "4487";
+  
+         function getScore(form) {
+
+   var score = 0;
+  var currElt;
+  var currSelection;
+  for (i=0; i<numQues; i++) {
+    currElt = i*numChoi;
+    answered=false; 
+    for (j=0; j<numChoi; j++) {
+      currSelection = form.elements[currElt + j];
+      if (currSelection.checked) {
+        answered=true;
+        if (currSelection.value == answers[i]) {
+          score++;
+          break;
+        }
+      }
+    }
+    if (answered ===false){alert("Do answer all the questions, Please") ;return false;}
+  }
+
+  var scoreper = Math.round(score/numQues*100);
+  form.percentage.value = scoreper + "%";
+  form.mark.value=score;
+}
+    </script>
 </html>
