--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Maths Quiz </title>
 </head>
 
-<body>
-    <center><h1>Indirapuram Publich School Cambridge Wing</h1></center>
+<body style="background-color:powderblue;">
+    <center><h1>Indirapuram Public School Cambridge Wing</h1></center>
     <p>
     <form name="quiz">
     <p>
-        <b>Q1.9 multiplied by 10 equal to </b>
-        <blockquote>
+        Q1.<b> 9 multiplied by 10 equal to </b>
+        <blockquote><b>
     <input type="radio" name="q1" value="90">90<br>
     <input type="radio" name="q1" value="0">0<br>
     <input type="radio" name="q1" value="10">10<br>
@@ -20,10 +20,11 @@
 
 <p><b>
 <hr>
-Q2.<b>{1000 X (3-4000} equals to </b>
+
+Q2.<b> { 10 X (3500-4000)} equals to </b>
 <blockquote>
 <input type="radio" name="q2" value="-1000">-1000<br>
-<input type="radio" name="q2" value="-2997">-2997<br>
+<input type="radio" name="q2" value="-5000">-5000<br>
 <input type="radio" name="q2" value="1000">1000<br>
 </blockquote>
 <p><b>
@@ -48,7 +49,7 @@ Q4. <b> 8972 divided by 2 eqal to  </b>
 
 <input type="button"value="Grade Me"onClick="getScore(this.form);">
 <input type="reset" value="Clear"><p>
-Number of score out of 15 = <input type= text size 15 name= "mark">
+Number of score out of 4 = <input type= text size 15 name= "mark">
 Score in percentage = <input type=text size=15 name="percentage"><br>
 
 </form>
@@ -65,7 +66,7 @@ var numQues = 4;
 var numChoi = 3;
 var answers = new Array(5);
     answers[0] = "90";
-    answers[1] = "-2997";
+    answers[1] = "-5000";
     answers[2] = "9604";
     answers[3] = "4487";
   
