--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 
 <html>
@@ -21,7 +22,7 @@
 <p><b>
 <hr>
 
-Q2.<b> { 10 X (3500-4000)} equals to </b>
+Q2.<b> { 10 X (3500-4000)} equal to </b>
 <blockquote>
 <input type="radio" name="q2" value="-1000">-1000<br>
 <input type="radio" name="q2" value="-5000">-5000<br>
@@ -38,7 +39,7 @@ Q3.<b>98 multiplied by 98 equal to </b>
 </blockquote>
 <p><b>
 <hr>
-Q4. <b> 8972 divided by 2 eqal to  </b>
+Q4. <b> 8972 divided by 2 equal to  </b>
 <blockquote>
 <input type="radio" name="q4" value="4487">4487<br>
 <input type="radio" name="q4" value="4427">4427<br>
@@ -49,8 +50,8 @@ Q4. <b> 8972 divided by 2 eqal to  </b>
 
 <input type="button"value="Grade Me"onClick="getScore(this.form);">
 <input type="reset" value="Clear"><p>
-Number of score out of 4 = <input type= text size 15 name= "mark">
-Score in percentage = <input type=text size=15 name="percentage"><br>
+Total score out of 4 = <input type= text size 15 name= "mark">
+Total score in percentage = <input type=text size=15 name="percentage"><br>
 
 </form>
 <p>
@@ -96,4 +97,7 @@ var answers = new Array(5);
   form.mark.value=score;
 }
     </script>
+<p> Created by Akshay Singh </p>
+<br>
+<p> Mentored By Ms Shailini Chauhan </p>
 </html>
